--- a/bower.json
+++ b/bower.json
@@ -4,9 +4,17 @@
   "dependencies": {
     "angular": "^1.5.0",
     "handsontable": "^0.25.0",
-    "ngHandsontable": "^0.11.1"
+    "ngHandsontable": "^0.11.1",
+    "bootstrap": "^3.3.6",
+    "install": "^1.0.4",
+    "angular-material": "^1.0.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0"
+  },
+  "overrides": {
+    "router": {
+      "main": "js/main.js"
+    }
   }
 }
